versions/v3.6.0/samples/bluetooth/hci_uart_async/README.md
---
version: v3.6.0
source_url: https://docs.zephyrproject.org/3.6.0/samples/bluetooth/hci_uart_async/README.html
original_path: samples/bluetooth/hci_uart_async/README.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down menu on the left and select the desired version.

# Bluetooth: HCI UART based on ASYNC UART

Expose a Zephyr Bluetooth Controller over a standard Bluetooth HCI UART interface.

This sample performs the same basic function as the HCI UART sample, but it uses the UART\_ASYNC\_API
instead of UART\_INTERRUPT\_DRIVEN API. Not all boards implement both UART APIs, so the board support
of the HCI UART sample may be different.

## Requirements

- A board with BLE support

## Default UART settings

By default the controller builds use the following settings:

- Baudrate: 1Mbit/s
- 8 bits, no parity, 1 stop bit
- Hardware Flow Control (RTS/CTS) enabled

## Building and Running

This sample can be found under [samples/bluetooth/hci\_uart\_async](https://github.com/zephyrproject-rtos/zephyr/blob/main/samples/bluetooth/hci_uart_async)
in the Zephyr tree and is built as a standard Zephyr application.

## Using the controller with emulators and BlueZ

The instructions below show how to use a Nordic nRF5x device as a Zephyr BLE
controller and expose it to Linux’s BlueZ.

First, make sure you have a recent BlueZ version installed by following the
instructions in the [Using BlueZ with Zephyr](../../../connectivity/bluetooth/bluetooth-tools.md#bluetooth-bluez) section.

Now build and flash the sample for the Nordic nRF5x board of your choice.
All of the Nordic Development Kits come with a Segger IC that provides a
debugger interface and a CDC ACM serial port bridge. More information can be
found in [Nordic nRF5x Segger J-Link](../../../develop/flash_debug/nordic_segger.md#nordic-segger).

For example, to build for the nRF52832 Development Kit:

```shell
# From the root of the zephyr repository
west build -b nrf52dk_nrf52832 samples/bluetooth/hci_uart_async
west flash
```

### Using the controller with QEMU or native\_sim

In order to use the HCI UART controller with QEMU or [native\_sim](../../../boards/posix/native_sim/doc/index.md#native-sim) you will need
to attach it to the Linux Host first. To do so simply build the sample and
connect the UART to the Linux machine, and then attach it with this command:

```shell
sudo btattach -B /dev/ttyACM0 -S 1000000 -R
```

Note

Depending on the serial port you are using you will need to modify the
`/dev/ttyACM0` string to point to the serial device your controller is
connected to.

Note

The `-R` flag passed to `btattach` instructs the kernel to avoid
interacting with the controller and instead just be aware of it in order
to proxy it to QEMU later.

If you are running `btmon` you should see a brief log showing how the
Linux kernel identifies the attached controller.

Once the controller is attached follow the instructions in the
[Running on QEMU or native\_sim](../../../connectivity/bluetooth/bluetooth-tools.md#bluetooth-qemu-native) section to use QEMU with it.

### Using the controller with BlueZ

In order to use the HCI UART controller with BlueZ you will need to attach it
to the Linux Host first. To do so simply build the sample and connect the
UART to the Linux machine, and then attach it with this command:

```shell
sudo btattach -B /dev/ttyACM0 -S 1000000
```

Note

Depending on the serial port you are using you will need to modify the
`/dev/ttyACM0` string to point to the serial device your controller is
connected to.

If you are running `btmon` you should see a comprehensive log showing how
BlueZ loads and initializes the attached controller.

Once the controller is attached follow the instructions in the
[Using Zephyr-based Controllers with BlueZ](../../../connectivity/bluetooth/bluetooth-tools.md#bluetooth-ctlr-bluez) section to use BlueZ with it.

### Debugging the controller

The sample can be debugged using RTT since the UART is reserved used by this
application. To enable debug over RTT the debug configuration file can be used.

```shell
west build samples/bluetooth/hci_uart_async -- -DEXTRA_CONFIG='debug.mixin.conf'
```

Then attach RTT as described here: [Using Segger J-Link](../../../develop/flash_debug/probes.md#using-segger-j-link)

### Using the controller with the Zephyr host

This describes how to hook up a board running this sample to a board running
an application that uses the Zephyr host.

On the controller side, the zephyr,bt-c2h-uart DTS property (in the chosen
block) is used to select which uart device to use. For example if we want to
keep the console logs, we can keep console on uart0 and the HCI on uart1 like
so:

```dts
/ {
   chosen {
      zephyr,console = &uart0;
      zephyr,shell-uart = &uart0;
      zephyr,bt-c2h-uart = &uart1;
   };
};
```

On the host application, some config options need to be used to select the H4
driver instead of the built-in controller:

```kconfig
CONFIG_BT_HCI=y
CONFIG_BT_CTLR=n
CONFIG_BT_H4=y
```

Similarly, the zephyr,bt-uart DTS property selects which uart to use:

```dts
/ {
   chosen {
      zephyr,console = &uart0;
      zephyr,shell-uart = &uart0;
      zephyr,bt-uart = &uart1;
   };
};
```
